Create UPDATE and DELETE endpoints to Topics